--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.20)
 
 project(sandbox CXX)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-find_package(assimp REQUIRED)
+find_package(assimp CONFIG REQUIRED)
 find_package(
   Boost
   COMPONENTS program_options
@@ -13,14 +13,14 @@ find_package(
   ffmpeg
   COMPONENTS avcodec avformat avutil swscale
   REQUIRED)
-find_package(glad REQUIRED)
-find_package(glfw3 REQUIRED)
-find_package(glm REQUIRED)
-find_package(LibDataChannel REQUIRED)
-find_package(nlohmann_json REQUIRED)
-find_package(SDL2 REQUIRED)
-find_package(SDL2_ttf REQUIRED)
-find_package(cgltf REQUIRED)
+find_package(glad CONFIG REQUIRED)
+find_package(glfw3 CONFIG REQUIRED)
+find_package(glm CONFIG REQUIRED)
+find_package(libdatachannel CONFIG REQUIRED)
+find_package(nlohmann_json CONFIG REQUIRED)
+find_package(SDL2 CONFIG REQUIRED)
+find_package(SDL2_ttf CONFIG REQUIRED)
+find_path(CGLTF_INCLUDE_DIRS "cgltf.h")
 
 set(SOURCE_GROUP_LABEL src)
 
