--- a/streaming/streaming_receiver/CMakeLists.txt
+++ b/streaming/streaming_receiver/CMakeLists.txt
@@ -2,6 +2,8 @@ file(GLOB SRC_FILES *.cpp *.hpp)
 
 add_executable(streaming_receiver ${SRC_FILES})
 
+target_compile_features(streaming_receiver PRIVATE cxx_std_23)
+
 target_link_libraries(streaming_receiver gp)
 target_link_libraries(streaming_receiver streaming_common)
 target_link_libraries(streaming_receiver Boost::program_options)
@@ -10,12 +12,6 @@ target_link_libraries(streaming_receiver nlohmann_json::nlohmann_json)
 target_link_libraries(streaming_receiver glm::glm)
 target_link_libraries(streaming_receiver glad::glad)
 target_link_libraries(streaming_receiver glfw)
-
-add_custom_command(
-  TARGET streaming_receiver
-  PRE_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different
-          ${LIBDATACHANNEL_DLL_BIN} $<TARGET_FILE_DIR:streaming_receiver>)
 
 add_custom_command(
   TARGET streaming_receiver
