--- a/streaming/streaming_signaling_server/CMakeLists.txt
+++ b/streaming/streaming_signaling_server/CMakeLists.txt
@@ -2,18 +2,13 @@ file(GLOB SRC_FILES *.cpp *.hpp)
 
 add_executable(streaming_signaling_server ${SRC_FILES})
 
+target_compile_features(streaming_signaling_server PRIVATE cxx_std_23)
+
 target_link_libraries(streaming_signaling_server gp)
 target_link_libraries(streaming_signaling_server streaming_common)
 target_link_libraries(streaming_signaling_server Boost::program_options)
 target_link_libraries(streaming_signaling_server LibDataChannel::LibDataChannel)
 target_link_libraries(streaming_signaling_server nlohmann_json::nlohmann_json)
-
-add_custom_command(
-  TARGET streaming_signaling_server
-  PRE_BUILD
-  COMMAND
-    ${CMAKE_COMMAND} -E copy_directory_if_different ${LIBDATACHANNEL_DLL_BIN}
-    $<TARGET_FILE_DIR:streaming_signaling_server>)
 
 set_target_properties(
   streaming_signaling_server
