--- a/streaming/streaming_streamer/CMakeLists.txt
+++ b/streaming/streaming_streamer/CMakeLists.txt
@@ -2,6 +2,8 @@ file(GLOB SRC_FILES *.cpp *.hpp)
 
 add_executable(streaming_streamer ${SRC_FILES})
 
+target_compile_features(streaming_streamer PRIVATE cxx_std_23)
+
 target_link_libraries(streaming_streamer gp)
 target_link_libraries(streaming_streamer streaming_common)
 target_link_libraries(streaming_streamer Boost::program_options)
@@ -10,12 +12,6 @@ target_link_libraries(streaming_streamer nlohmann_json::nlohmann_json)
 target_link_libraries(streaming_streamer glm::glm)
 target_link_libraries(streaming_streamer glad::glad)
 target_link_libraries(streaming_streamer glfw)
-
-add_custom_command(
-  TARGET streaming_streamer
-  PRE_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different
-          ${LIBDATACHANNEL_DLL_BIN} $<TARGET_FILE_DIR:streaming_streamer>)
 
 add_custom_command(
   TARGET streaming_streamer
