--- a/streaming/streaming_common/CMakeLists.txt
+++ b/streaming/streaming_common/CMakeLists.txt
@@ -2,14 +2,15 @@ file(GLOB SRC_FILES *.cpp *.hpp)
 
 add_library(streaming_common STATIC ${SRC_FILES})
 
+target_compile_features(streaming_common PRIVATE cxx_std_23)
+
 target_include_directories(streaming_common
                            PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
 
 target_link_libraries(streaming_common gp)
-target_link_libraries(streaming_common ffmpeg::avcodec)
-target_link_libraries(streaming_common ffmpeg::avformat)
-target_link_libraries(streaming_common ffmpeg::avutil)
-target_link_libraries(streaming_common ffmpeg::swscale)
+target_include_directories(streaming_common PRIVATE ${FFMPEG_INCLUDE_DIRS})
+target_link_directories(streaming_common PRIVATE ${FFMPEG_LIBRARY_DIRS})
+target_link_libraries(streaming_common ${FFMPEG_LIBRARIES})
 
 set_target_properties(streaming_common PROPERTIES FOLDER ${SOLUTION_FOLDER})
 
