--- a/wolf/wolf_common/CMakeLists.txt
+++ b/wolf/wolf_common/CMakeLists.txt
@@ -2,6 +2,8 @@ file(GLOB SRC_FILES *.cpp *.hpp)
 
 add_library(wolf_common STATIC ${SRC_FILES})
 
+target_compile_features(wolf_common PRIVATE cxx_std_23)
+
 target_include_directories(wolf_common PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
 
 target_link_libraries(wolf_common gp)
