--- a/wolf/wolf_singlethread/CMakeLists.txt
+++ b/wolf/wolf_singlethread/CMakeLists.txt
@@ -2,6 +2,8 @@ file(GLOB SRC_FILES *.cpp *.hpp)
 
 add_executable(wolf_singlethread ${SRC_FILES})
 
+target_compile_features(wolf_singlethread PRIVATE cxx_std_23)
+
 target_link_libraries(wolf_singlethread gp)
 target_link_libraries(wolf_singlethread wolf_common)
 target_link_libraries(wolf_singlethread SDL2::SDL2)
