--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ vcpkg_installed/
 
 # User-specific files
 CMakeUserPresets.json
+
+# OS-specific files
+.DS_Store
+
+# VS Code workspace files
+.vscode/
