37: Replace Conan with vcpkg
- Adjustments for MacOS

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
-# Build folder
-[Bb]uild/
+# Build directories
+[Bb]uild*/
 
-# VSCode
-.vscode/
+# vcpkg directories
+vcpkg_installed/
 
-# Conan
+# User-specific files
 CMakeUserPresets.json
+
+# OS-specific files
+.DS_Store
+
+# VS Code workspace files
+.vscode/
