--- a/wolf/wolf_vswap_file_viewer/CMakeLists.txt
+++ b/wolf/wolf_vswap_file_viewer/CMakeLists.txt
@@ -2,6 +2,8 @@ file(GLOB SRC_FILES *.cpp *.hpp)
 
 add_executable(wolf_vswap_file_viewer ${SRC_FILES})
 
+target_compile_features(wolf_vswap_file_viewer PRIVATE cxx_std_23)
+
 target_link_libraries(wolf_vswap_file_viewer gp)
 target_link_libraries(wolf_vswap_file_viewer wolf_common)
 target_link_libraries(wolf_vswap_file_viewer Boost::program_options)
@@ -25,7 +27,8 @@ add_custom_command(
 
 set_target_properties(
   wolf_vswap_file_viewer
-  PROPERTIES FOLDER ${SOLUTION_FOLDER} VS_DEBUGGER_WORKING_DIRECTORY
-                                       $<TARGET_FILE_DIR:wolf_vswap_file_viewer>)
+  PROPERTIES FOLDER ${SOLUTION_FOLDER}
+             VS_DEBUGGER_WORKING_DIRECTORY
+             $<TARGET_FILE_DIR:wolf_vswap_file_viewer>)
 
 source_group(${SOURCE_GROUP_LABEL} FILES ${SRC_FILES})
