--- a/wolf/wolf_singlethread/CMakeLists.txt
+++ b/wolf/wolf_singlethread/CMakeLists.txt
@@ -6,15 +6,24 @@ target_compile_features(wolf_singlethread PRIVATE cxx_std_23)
 
 target_link_libraries(wolf_singlethread gp)
 target_link_libraries(wolf_singlethread wolf_common)
+target_link_libraries(wolf_singlethread Boost::program_options)
 target_link_libraries(wolf_singlethread SDL2::SDL2)
 target_link_libraries(wolf_singlethread SDL2::SDL2main)
-target_link_libraries(wolf_singlethread Boost::program_options)
 
-add_custom_command(
-  TARGET wolf_singlethread
-  PRE_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy_directory ${DATA_DIR}
-          $<TARGET_FILE_DIR:wolf_singlethread>/data)
+if(DEFINED EMSCRIPTEN)
+  target_compile_options(wolf_singlethread
+                         PRIVATE ${EMSCRIPTEN_COMPILE_OPTIONS})
+  target_link_options(wolf_singlethread PRIVATE ${EMSCRIPTEN_LINK_OPTIONS})
+
+  target_link_options(wolf_singlethread PRIVATE --preload-file
+                      "${DATA_DIR}@/data")
+else()
+  add_custom_command(
+    TARGET wolf_singlethread
+    PRE_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory ${DATA_DIR}
+            $<TARGET_FILE_DIR:wolf_singlethread>/data)
+endif()
 
 set_target_properties(
   wolf_singlethread
