--- a/ai/ai_common/CMakeLists.txt
+++ b/ai/ai_common/CMakeLists.txt
@@ -2,9 +2,16 @@ file(GLOB SRC_FILES *.cpp *.hpp)
 
 add_library(ai_common STATIC ${SRC_FILES})
 
+target_compile_features(ai_common PRIVATE cxx_std_23)
+
 target_include_directories(ai_common PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
 
 target_link_libraries(ai_common gp)
+
+if(DEFINED EMSCRIPTEN)
+  target_compile_options(ai_common PRIVATE ${EMSCRIPTEN_COMPILE_OPTIONS})
+  target_link_options(ai_common PRIVATE ${EMSCRIPTEN_LINK_OPTIONS})
+endif()
 
 set_target_properties(ai_common PROPERTIES FOLDER ${SOLUTION_FOLDER})
 
