45: Aspect ratio updated at start

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-if(CMAKE_SYSTEM_NAME STREQUAL "Emscripten")
-  set(EMSCRIPTEN TRUE)
-
+if(DEFINED EMSCRIPTEN)
   set(CMAKE_EXECUTABLE_SUFFIX ".html")
-  set(EMSCRIPTEN_COMPILE_OPTIONS "-pthread")
-  set(EMSCRIPTEN_LINK_OPTIONS "-O3" "-pthread")
 endif()
 
 find_package(assimp CONFIG REQUIRED)
@@ -28,7 +24,7 @@ find_package(SDL2_ttf CONFIG REQUIRED)
 
 if(NOT DEFINED EMSCRIPTEN)
   find_package(
-    ffmpeg
+    FFMPEG
     COMPONENTS avcodec avformat avutil swscale
     REQUIRED)
   find_package(glad CONFIG REQUIRED)
@@ -47,23 +43,24 @@ add_subdirectory(ai)
 add_subdirectory(gp)
 add_subdirectory(wolf)
 
+if(DEFINED CMAKE_CXX_CLANG_TIDY)
+  set(CMAKE_CXX_CLANG_TIDY_CONFIG_FILE "${CMAKE_SOURCE_DIR}/.clang-tidy")
+  message(
+    STATUS
+      "Using clang-tidy with config file: ${CMAKE_CXX_CLANG_TIDY_CONFIG_FILE}")
+endif()
+
 # Copy compile_commands.json to the source directory if using Ninja or
 # Makefiles. compile_commands.json is used by clang-tidy and other tools to
-# replicate the build commands.
-if(NOT DEFINED EMSCRIPTEN)
-  set(CMAKE_CXX_CLANG_TIDY "clang-tidy")
-  set(CMAKE_CXX_CLANG_TIDY_CONFIG_FILE "${CMAKE_SOURCE_DIR}/.clang-tidy")
-  set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+# replicate the build commands.)
+if(CMAKE_GENERATOR MATCHES "Ninja" OR CMAKE_GENERATOR MATCHES "Makefiles")
+  set(COMPILE_COMMANDS_SRC "${CMAKE_BINARY_DIR}/compile_commands.json")
+  set(COMPILE_COMMANDS_DST "${CMAKE_SOURCE_DIR}/compile_commands.json")
 
-  if(CMAKE_GENERATOR MATCHES "Ninja" OR CMAKE_GENERATOR MATCHES "Makefiles")
-    set(COMPILE_COMMANDS_SRC "${CMAKE_BINARY_DIR}/compile_commands.json")
-    set(COMPILE_COMMANDS_DST "${CMAKE_SOURCE_DIR}/compile_commands.json")
-
-    add_custom_target(
-      copy_compile_commands ALL
-      COMMAND ${CMAKE_COMMAND} -E copy_if_different "${COMPILE_COMMANDS_SRC}"
-              "${COMPILE_COMMANDS_DST}"
-      DEPENDS "${COMPILE_COMMANDS_SRC}"
-      COMMENT "Copying compile_commands.json to source directory")
-  endif()
+  add_custom_target(
+    copy_compile_commands ALL
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different "${COMPILE_COMMANDS_SRC}"
+            "${COMPILE_COMMANDS_DST}"
+    DEPENDS "${COMPILE_COMMANDS_SRC}"
+    COMMENT "Copying compile_commands.json to source directory")
 endif()
