--- a/gp/CMakeLists.txt
+++ b/gp/CMakeLists.txt
@@ -4,15 +4,13 @@
 # contains support for various functionalities such as math operators, common
 # structures used across different projects, helper functions for string
 # operators, and headers for easy inclusion. It also provides higher-level
-# support for projects using SDL (Simple DirectMedia Layer) and/or GLFW
-# (Graphics Library Framework), if available.
+# support for projects using SDL (Simple DirectMedia Layer) and OpenGL.
 #
 # Please ensure that your project includes the necessary dependencies for SDL
-# and GLFW.
+# and OpenGL.
 
 file(GLOB_RECURSE FFMPEG_FILES "${CMAKE_CURRENT_SOURCE_DIR}/ffmpeg/*")
 file(GLOB_RECURSE GL_FILES "${CMAKE_CURRENT_SOURCE_DIR}/gl/*")
-file(GLOB_RECURSE GLFW_FILES "${CMAKE_CURRENT_SOURCE_DIR}/glfw/*")
 file(GLOB_RECURSE JSON_FILES "${CMAKE_CURRENT_SOURCE_DIR}/json/*")
 file(GLOB_RECURSE MATH_FILES "${CMAKE_CURRENT_SOURCE_DIR}/math/*")
 file(GLOB_RECURSE MISC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/misc/*")
@@ -21,10 +19,9 @@ file(GLOB_RECURSE UTILS_FILES "${CMAKE_CURRENT_SOURCE_DIR}/utils/*")
 
 if(NOT DEFINED EMSCRIPTEN)
   set(SRC_FILES ${SRC_FILES} ${FFMPEG_FILES})
-  set(SRC_FILES ${SRC_FILES} ${GLFW_FILES})
-  set(SRC_FILES ${SRC_FILES} ${GL_FILES})
 endif()
 
+set(SRC_FILES ${SRC_FILES} ${GL_FILES})
 set(SRC_FILES ${SRC_FILES} ${JSON_FILES})
 set(SRC_FILES ${SRC_FILES} ${MATH_FILES})
 set(SRC_FILES ${SRC_FILES} ${MISC_FILES})
@@ -52,7 +49,6 @@ if(NOT DEFINED EMSCRIPTEN)
   target_link_directories(gp PRIVATE ${FFMPEG_LIBRARY_DIRS})
   target_link_libraries(gp PRIVATE ${FFMPEG_LIBRARIES})
   target_link_libraries(gp PRIVATE glad::glad)
-  target_link_libraries(gp PRIVATE glfw)
 endif()
 
 if(DEFINED EMSCRIPTEN)
