--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -28,14 +28,14 @@ jobs:
         include:
           - os: windows-latest
             preset: vs2022
-          - os: windows-latest
-            preset: emscripten
-          - os: macos-latest
-            preset: ninja
-          - os: macos-latest
-            preset: emscripten
-          - os: ubuntu-latest
-            preset: default
+          #- os: windows-latest
+          #  preset: emscripten
+          #- os: macos-latest
+          #  preset: ninja
+          #- os: macos-latest
+          #  preset: emscripten
+          #- os: ubuntu-latest
+          #  preset: default
           - os: ubuntu-latest
             preset: emscripten
         exclude:
@@ -48,6 +48,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Setup vcpkg
+      uses: lukka/run-vcpkg@v11
+      with:
+        vcpkgJsonGlob: '**/vcpkg.json'
 
     - name: Install system dependencies
       run: |
@@ -86,11 +91,6 @@ jobs:
 
     - name: Setup Ninja
       uses: seanmiddleditch/gha-setup-ninja@master
-
-    - name: Setup vcpkg
-      uses: lukka/run-vcpkg@v11
-      with:
-        vcpkgJsonGlob: 'vcpkg.json'
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
