--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -41,6 +41,8 @@ jobs:
             preset: default
 
           - os: ubuntu-latest
+            preset: ninja
+          - os: ubuntu-latest
             preset: vs2022
           - os: macos-latest
             preset: vs2022
