--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Setup vcpkg
       uses: lukka/run-vcpkg@v11
       with:
-        vcpkgJsonGlob: '**/vcpkg.json'
+        vcpkgJsonGlob: '${{ github.workspace }}/vcpkg.json'
 
     - name: Install system dependencies
       run: |
