--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -1,6 +1,6 @@
-# This starter workflow is for a CMake project running on multiple platforms. There is a different starter workflow if you just want a single platform.
-# See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-single-platform.yml
-name: CMake on multiple platforms
+# Workflow created based on CppCMakeVcpkgTemplate by lukka
+# For more details visit: https://github.com/lukka/CppCMakeVcpkgTemplate/blob/v11/.github/workflows/hosted-pure-workflow.yml
+name: multiplatform-cmake-build-with-tests
 
 on:
   push:
@@ -10,18 +10,12 @@ on:
 
 jobs:
   build:
+    name: ${{ matrix.setup.os }} - ${{ matrix.setup.preset }}
     runs-on: ${{ matrix.setup.os }}
 
     strategy:
-      # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
       fail-fast: false
 
-      # Set up a matrix to run the following 3 configurations:
-      # 1. <Windows, Release, latest MSVC compiler toolchain on the default runner image, default generator>
-      # 2. <Linux, Release, latest GCC compiler toolchain on the default runner image, default generator>
-      # 3. <Linux, Release, latest Clang compiler toolchain on the default runner image, default generator>
-      #
-      # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
         setup:
           - os: windows-2025
@@ -31,110 +25,111 @@ jobs:
           - os: macos-15
             preset: emscripten
 
+    env:
+      _VCPKG_: ${{ github.workspace }}/vcpkg
+      VCPKG_DEFAULT_BINARY_CACHE: ${{ github.workspace }}/vcpkg_cache
+      VCPKG_BINARY_SOURCES: "clear;x-gha,readwrite"
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Set up ACTIONS_CACHE_URL and ACTIONS_RUNTIME_TOKEN for caching
+        uses: actions/github-script@v7
+        with:
+          script: |
+            core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
+            core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
 
-      - name: Setup vcpkg
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          submodules: true
+
+      - name: "Create directory '${{ env.VCPKG_DEFAULT_BINARY_CACHE }}'"
+        run: mkdir -p $VCPKG_DEFAULT_BINARY_CACHE
+        shell: bash
+
+      - name: Get CMake
+        uses: lukka/get-cmake@latest
+
+      - name: Restore vcpkg
+        uses: actions/cache@v4
+        with:
+          path: |
+            ${{ env._VCPKG_ }}
+            !${{ env._VCPKG_ }}/buildtrees
+            !${{ env._VCPKG_ }}/packages
+            !${{ env._VCPKG_ }}/downloads
+            !${{ env._VCPKG_ }}/installed
+          key: |
+            ${{ hashFiles( '.git/modules/vcpkg/HEAD' )}}
+
+      - name: Setup vcpkg.
         uses: lukka/run-vcpkg@v11
-        #with:
-        #vcpkgJsonGlob: '${{ github.workspace }}/vcpkg.json'
+        with:
+          vcpkgJsonGlob: "vcpkg.json"
 
-      - name: Install system dependencies
-        run: |
-          if [ "$RUNNER_OS" == "Linux" ]; then
-            sudo apt-get update
-            sudo apt-get install nasm
-          elif [ "$RUNNER_OS" == "macOS" ]; then
-            brew install nasm
-          elif [ "$RUNNER_OS" == "Windows" ]; then
-            # NASM is usually available or vcpkg handles it
-            echo "NASM handling on Windows..."
-          fi
-        shell: bash
-
-      - name: Setup Emscripten
-        if: matrix.setup.preset == 'emscripten'
-        run: |
-          git clone https://github.com/emscripten-core/emsdk.git
-          cd emsdk
-          ./emsdk install latest
-          ./emsdk activate latest
-
-          # Set EMSDK environment variable for all subsequent steps
-          echo "EMSDK=$PWD" >> $GITHUB_ENV
-
-          # Source the environment and export variables
-          source ./emsdk_env.sh
-
-          # Make emcc available in PATH
-          echo "$PWD/upstream/emscripten" >> $GITHUB_PATH
-
-          # Verify installation
-          which emcc
-          emcc --version
-        shell: bash
-
-      - name: Setup Ninja
-        uses: seanmiddleditch/gha-setup-ninja@master
-
-      - name: Set reusable strings
-        # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
-        id: strings
-        shell: bash
-        run: |
-          echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
-
-      - name: Run CMake consuming CMakePreset.json and run vcpkg to build packages
+      - name: Run CMake and CTest
         uses: lukka/run-cmake@v10
         with:
           configurePreset: ${{ matrix.setup.preset }}
-          buildPreset:
-            ${{ matrix.setup.preset }}
-            # This is the default path to the CMakeLists.txt along side the
-            # CMakePresets.json. Change if you need have CMakeLists.txt and CMakePresets.json
-            # located elsewhere.
-            # cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
+          buildPreset: ${{ matrix.setup.preset }}
+          testPreset: ${{ matrix.setup.preset }}
+#      - name: Install system dependencies
+#        run: |
+#          if [ "$RUNNER_OS" == "Linux" ]; then
+#            sudo apt-get update
+#            sudo apt-get install nasm
+#          elif [ "$RUNNER_OS" == "macOS" ]; then
+#            brew install nasm
+#          elif [ "$RUNNER_OS" == "Windows" ]; then
+#            # NASM is usually available or vcpkg handles it
+#            echo "NASM handling on Windows..."
+#          fi
+#        shell: bash
 
-            # You could use CMake workflow presets defined in the CMakePresets.json
-            # with just this line below. Note this one cannot be used with any other
-            # preset input, it is mutually exclusive.
-            # workflowPreset: 'workflow-name'
+#      - name: Setup Emscripten
+#        if: matrix.setup.preset == 'emscripten'
+#        run: |
+#          git clone https://github.com/emscripten-core/emsdk.git
+#          cd emsdk
+#          ./emsdk install latest
+#          ./emsdk activate latest
+#
+#          # Set EMSDK environment variable for all subsequent steps
+#          echo "EMSDK=$PWD" >> $GITHUB_ENV
+#
+#          # Source the environment and export variables
+#          source ./emsdk_env.sh
+#
+#          # Make emcc available in PATH
+#          echo "$PWD/upstream/emscripten" >> $GITHUB_PATH
+#
+#          # Verify installation
+#          which emcc
+#          emcc --version
+#        shell: bash
 
-            # This is the name of the CMakePresets.json's configuration to use to generate
-            # the project files. This configuration leverages the vcpkg.cmake toolchain file to
-            # run vcpkg and install all dependencies specified in vcpkg.json.
+#      - name: Setup Ninja
+#        uses: seanmiddleditch/gha-setup-ninja@master
 
-            # Additional arguments can be appended to the cmake command.
-            # This is useful to reduce the number of CMake's Presets since you can reuse
-            # an existing preset with different variables.
-            #configurePresetAdditionalArgs: "['-DENABLE_YOUR_FEATURE=1']"
+#      - name: Set reusable strings
+#        # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
+#        id: strings
+#        shell: bash
+#        run: |
+#          echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
-            # This is the name of the CMakePresets.json's configuration to build the project.
+#      - name: Run CMake consuming CMakePreset.json and run vcpkg to build packages
+#        uses: lukka/run-cmake@v10
+#        with:
+#          configurePreset: ${{ matrix.setup.preset }}
+#          buildPreset: ${{ matrix.setup.preset }}
 
-            # Additional arguments can be appended when building, for example to specify the
-            # configuration to build.
-            # This is useful to reduce the number of CMake's Presets you need in CMakePresets.json.
-            #buildPresetAdditionalArgs: "['--config Release']"
+#      - name: Build
+#        # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
+#        run: cmake --build --preset ${{ matrix.setup.preset }}
 
-            # This is the name of the CMakePresets.json's configuration to test the project with.
-            #testPreset: 'ninja-multi-vcpkg'
-            # Additional arguments can be appended when testing, for example to specify the config
-            # to test.
-            # This is useful to reduce the number of CMake's Presets you need in CMakePresets.json.
-            #testPresetAdditionalArgs: "['--config Release']"
-
-      #- name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      #run: >
-      #cmake --preset ${{ matrix.setup.preset }}
-
-      - name: Build
-        # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-        run: cmake --build --preset ${{ matrix.setup.preset }}
-
-      - name: Test
-        # working-directory: ${{ steps.strings.outputs.build-output-dir }}
-        # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-        # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-        run: ctest --test-dir build/${{ matrix.setup.preset }}
+#      - name: Test
+#        # working-directory: ${{ steps.strings.outputs.build-output-dir }}
+#        # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
+#        # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+#        run: ctest --test-dir build/${{ matrix.setup.preset }}
