--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -21,30 +21,34 @@ jobs:
           - os: windows-2025
             preset: vs2022
           - os: ubuntu-24.04
-            preset: emscripten
+            preset: ninja
           - os: macos-15
-            preset: emscripten
+            preset: xcode
 
     env:
       _VCPKG_: ${{ github.workspace }}/vcpkg
-      VCPKG_DEFAULT_BINARY_CACHE: ${{ github.workspace }}/vcpkg_cache
+      VCPKG_DEFAULT_BINARY_CACHE: ${{ github.workspace }}/vcpkg/bincache
       VCPKG_BINARY_SOURCES: "clear;x-gha,readwrite"
 
     steps:
-      - uses: actions/github-script@v7
+      - name: Set up ACTIONS_CACHE_URL and ACTIONS_RUNTIME_TOKEN for caching
+        uses: actions/github-script@v7
         with:
           script: |
             core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
             core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
 
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           submodules: true
 
-      - run: mkdir -p $VCPKG_DEFAULT_BINARY_CACHE
+      - name: Create directory '${{ env.VCPKG_DEFAULT_BINARY_CACHE }}'
+        run: mkdir -p $VCPKG_DEFAULT_BINARY_CACHE
         shell: bash
 
-      - uses: lukka/get-cmake@latest
+      - name: Get CMake
+        uses: lukka/get-cmake@latest
 
       - name: Restore vcpkg
         uses: actions/cache@v4
