--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -45,6 +45,10 @@ jobs:
       - name: Get CMake
         uses: lukka/get-cmake@latest
 
+      - name: Get nasm
+        if: matrix.setup.os == 'ubuntu-24.04'
+        uses: ilammy/setup-nasm@v1
+
       - name: Cache vcpkg
         uses: actions/cache@v4
         with:
