--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -18,12 +18,14 @@ jobs:
 
       matrix:
         setup:
-          - os: ubuntu-24.04
+          - os: ubuntu-latest
             preset: ninja
-          - os: macos-15
+          - os: macos-latest
             preset: xcode
-          - os: windows-2025
+          - os: windows-latest
             preset: vs2022
+          - os: macos-latest
+            preset: emscripten
 
     steps:
       - name: Set up ACTIONS_CACHE_URL and ACTIONS_RUNTIME_TOKEN for caching
@@ -66,6 +68,12 @@ jobs:
         uses: lukka/run-vcpkg@v11
         with:
           vcpkgJsonGlob: "wasm32-emscripten/vcpkg.json"
+
+      - name: Setup Emscripten
+        if: matrix.setup.preset == 'emscripten'
+        uses: lovasoa/setup-emscripten@master
+        with:
+          emscripten-version: '4.0.16'
 
       - name: Run CMake and CTest
         uses: lukka/run-cmake@v10
