--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -57,21 +57,10 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ${{ github.workspace }}/vcpkg_cache
-          key: vcpkg-${{ matrix.setup.os }}-${{ matrix.setup.preset }}-${{ hashFiles('vcpkg.json', 'wasm32-emscripten/vcpkg.json', 'CMakeLists.txt', '**/CMakeLists.txt', 'CMakePresets.json') }}
+          key: vcpkg-${{ matrix.setup.os }}-${{ matrix.setup.preset }}-${{ hashFiles('vcpkg-configuration.json', 'vcpkg.json', 'wasm32-emscripten/vcpkg.json', 'CMakeLists.txt', '**/CMakeLists.txt', 'CMakePresets.json') }}
 
-      - name: Setup vcpkg for non-Emscripten
-        if: matrix.setup.preset != 'emscripten'
+      - name: Setup vcpkg
         uses: lukka/run-vcpkg@v11
-        with:
-          vcpkgJsonGlob: "vcpkg.json"
-          vcpkgGitCommitId: "55b6b23184445152a1a2a8373d1c79f589a7ca6c"
-
-      - name: Setup vcpkg for Emscripten
-        if: matrix.setup.preset == 'emscripten'
-        uses: lukka/run-vcpkg@v11
-        with:
-          vcpkgJsonGlob: "wasm32-emscripten/vcpkg.json"
-          vcpkgGitCommitId: "55b6b23184445152a1a2a8373d1c79f589a7ca6c"
 
       - name: Cache Emscripten
         if: matrix.setup.preset == 'emscripten'
